--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
+    "motion": "^12.3.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.3.1",
