--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.1",
+    "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
-    "motion": "^12.3.1",
+    "motion": "^12.4.3",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.3.1",
